Setup github actions

--- a/java-service/build.gradle
+++ b/java-service/build.gradle
@@ -24,6 +24,12 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(21))
+    }
+}
+
 test {
     useJUnitPlatform()
 }
